--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
 
         <div class="cajasopciones">
 
-            <div class="contenedor _reclamo" onclick="cajaContenedor('reclamo');">
-                <img src="/imagenes/reclamo" alt="">
-                <p>Reclamos</p>
-            </div>
+            <div class="cajasCentradas">
 
-            <div class="contenedor _queja" onclick="cajaContenedor('queja');">
-                <img src="/imagenes/queja" alt="">
-                <p>Quejas</p>
-            </div>
+                <div class="contenedorDatosPersonales">
+                    <div class="contenedor" id="Ccreclamos" onclick="cajaContenedor('reclamo');">
+                        <img src="/imagenes/reclamo" alt="">
+                        <p>Reclamos</p>
+                    </div>
+    
+                    <div class="contenedor" id="Ccquejas" onclick="cajaContenedor('queja');">
+                        <img src="/imagenes/queja" alt="">
+                        <p>Quejas</p>
+                    </div>
+    
+                    <div class="contenedor" id="Ccapelacion" onclick="cajaContenedor('apelacion');">
+                        <img src="/imagenes/apelacion" alt="">
+                        <p>Apelación</p>
+                    </div>
+                </div>
 
-            <div class="contenedor _apelacion" onclick="cajaContenedor('apelacion');">
-                <img src="/imagenes/apelacion" alt="">
-                <p>Apelación</p>
             </div>
 
         </div>
@@ -53,6 +59,8 @@
             </div>
 
         </div>
+
+
 
 
         <div class="datosPersonales" id="formulario_personal">
