cambiando los colores xd

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 
         <div class="quien" id="datosPersonales">
 
-            <div class="cajasCentradas">
+            <div class="cajasCentradas" onclick="cambiarColorDatos()">
 
                 <div class="contenedorDatosPersonales">
-                    <div class="btn" onclick="personales()">
+                    <div class="btn" id="dPersonales" onclick="personales()">
                         <img src="/imagenes/abonado.png" alt="">
                         <label for="Abonado">Abonado</label>
                     </div>
         
-                    <div class="btn" onclick="usuario()">
+                    <div class="btn" id="dUsuarios" onclick="usuario()">
                         <img src="/imagenes/usuario.png" alt="">
                         <label for="Usuario">Usuario</label>
                     </div>
         
-                    <div class="btn" onclick="representante()">
+                    <div class="btn" id="dRepresentantes" onclick="representante()">
                         <img src="/imagenes/representante" alt="">
                         <label for="Representante">Representante</label>
                     </div>
