actualizando la funcion del tipo de documento

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
 
                             <div class="datos">
                                 <label>Nombres</label>
-                                <input type="text" name="nombres" id="name" placeholder="Nombre del reclamante">
-                                <p class="alert" id="alertNombre"></p>
+                                <input type="text" class="datosPersonales" id="name" placeholder="Nombre del reclamante">
+                                <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="datos">
                                 <label>Apellidos</label>
-                                <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos del reclamante">
-                                <p class="alert" id="alertNombre"></p>
+                                <input type="text" class="datosPersonales" id="apellidos" placeholder="Apellidos del reclamante">
+                                <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="datos" id="extra_usuario">
                                 <label>Especifique su relación con el cliente</label>
-                                <input type="text" name="relacion" id="relacion" placeholder="Madre, Padre, Hijo, etc.">
+                                <input type="text" name="datosPersonales" id="relacion" placeholder="Madre, Padre, Hijo, etc.">
                                 <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="representantecss" id="extra_representante">
                                 <div class="datos">
                                     <label>Razón Social</label>
-                                    <input type="text" id="razonsocial" name="razonSocial" placeholder="Razón social">
+                                    <input type="text" id="razonsocial" name="datosPersonales" placeholder="Razón social">
                                     <!-- <p class="alert" id="alertNombre"></p> -->
                                 </div>
                                 <div class="datos">
@@ -119,7 +119,7 @@
                             </div>
                             <div class="datos">
                                 <label>Número de contacto</label>
-                                <input type="text" name="numeroContacto" id="numeroContacto" placeholder="Número de contacto" maxlength="9">
+                                <input type="text" name="datosPersonales" id="numeroContacto" placeholder="Número de contacto" maxlength="9">
                                 <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="datos">
@@ -161,12 +161,12 @@
                             </div>
                             <div class="datos">
                                 <label>Dirección</label>
-                                <input type="text" name="direccion" id="direccion" placeholder="Dirección">
+                                <input type="text" name="datosPersonales" id="direccion" placeholder="Dirección">
                                 <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="datos">
                                 <label>Correo electrónico</label>
-                                <input type="email" name="correo" id="correo" placeholder="ejemplo@gmail.com">
+                                <input type="email" name="datosPersonales" id="correo" placeholder="ejemplo@gmail.com">
                                 <!-- <p class="alert" id="alertNombre"></p> -->
                             </div>
                             <div class="datos">
