cambios de colores y cjas

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
                 <div class="tituloOpcion">
                     <h3 id="opcionEscojida">Seleccionar Opcion :</h3>
                 </div>
-            </div>
-        </div>
-
-        <div class="glosario" id="glosarioQRA">
-            <div class="contenedorGlosario">
-                <p><b>- Abonado .-</b> Las personas que contratan el servicio, Titulares del servicio.</p>
-                <p><b>- Usuario .-</b> Las personas que utilizan el servicio.</p>
-                <p><b>- Representante .-</b> El Usuario podrá designar un representante para iniciar el procedimiento de reclamo, a través de una carta poder simple firmada por el usuario.</p>
+                <div class="glosario" id="glosarioQRA">
+                    <div class="contenedorGlosario">
+                        <p><b>- Abonado .-</b> Las personas que contratan el servicio, Titulares del servicio.</p>
+                        <p><b>- Usuario .-</b> Las personas que utilizan el servicio.</p>
+                        <p><b>- Representante .-</b> El Usuario podrá designar un representante para iniciar el procedimiento de reclamo, a través de una carta poder simple firmada por el usuario.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -76,6 +75,11 @@
                 </div>
                 <div class="tituloOpcion">
                     <h3 id="tituloAUR">Usted es</h3>
+                </div>
+                <div class="glosario" id="glosarioQRA">
+                    <div class="contenedorGlosario">
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -793,22 +797,7 @@
                             <label for="">Empresa Operadora</label>
                             <select name="" id="empresaOperadorReclamo">
                                 <option value="" selected>Seleccionar Opción</option>
-                                <option value="BEST CABLE - Best Cable Perú S.A.C.">BEST CABLE - Best Cable Perú S.A.C.</option>
-                                <option value="BITEL - Viettel Perú S.A.C.">BITEL - Viettel Perú S.A.C.</option>
-                                <option value="CLARO -América Móvil Perú S.A.C.">CLARO -América Móvil Perú S.A.C.</option>
-                                <option value="CUY MÓVIL - Guinea Mobile S.A.C.">CUY MÓVIL - Guinea Mobile S.A.C.</option>
-                                <option value="DIRECTV - Directv Perú S.RL.">DIRECTV - Directv Perú S.RL.</option>
-                                <option value="ECONOCABLE - Econocable Media S.A.C.">ECONOCABLE - Econocable Media S.A.C.</option>
-                                <option value="ENTEL - Entel Perú S.A.">ENTEL - Entel Perú S.A.</option>
-                                <option value="FIBERLUX - Fiberlux S.A.C.">FIBERLUX - Fiberlux S.A.C.</option>
-                                <option value="FLASH - Flash Servicios Perú S.R.L.">FLASH - Flash Servicios Perú S.R.L.</option>
-                                <option value="HUGUES - Hugues de Perú SRL">HUGUES - Hugues de Perú SRL</option>
-                                <option value="MOVISTAR -Telefónica del Perú S.A.A.">MOVISTAR -Telefónica del Perú S.A.A.</option>
-                                <option value="OPTICAL - Optical Technologies S.A.C">OPTICAL - Optical Technologies S.A.C</option>
-                                <option value="STAR GLOBAL - Star Global Com S.A.C.">STAR GLOBAL - Star Global Com S.A.C.</option>
-                                <option value="WIN - Winet Telecom S.A.C.">WIN - Winet Telecom S.A.C.</option>
-                                <option value="WINGS MOBILE - Guinea Mobile S.A.C.">WINGS MOBILE - Guinea Mobile S.A.C.</option>
-                                <option value="WOW - Wow Tel SAC">WOW - Wow Tel SAC</option>
+                                <option value="FiberPro - PYD Telecom S.R.L">FiberPro - PYD Telecom S.R.L</option>
                             </select>
                         </div>
 
@@ -816,7 +805,7 @@
                             <label for="">Servicio Contratado</label>
                             <select name="" id="servicioContratadoReclamo">
                                 <option value="" selected>Seleccionar Opción</option>
-                                <option value="FiberPro - PYD Telecom S.R.L">FiberPro - PYD Telecom S.R.L</option>
+                                <option value="Internet de acceso fijo">Internet de acceso fijo</option>
                             </select>
                         </div>
 
