por radio button escojido

--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,7 @@
     
 
             <div class="contenedorBtn" id="btnEnviarFormulario">
-                <input type="button" value="Finzalizar" onclick="mostrarDetalles()" id="mostrarDatos"/>
+                <input type="button" value="finalizar" onclick="mostrarDetalles()" id="mostrarDatos"/>
             </div>
 
 
@@ -2023,8 +2023,7 @@
         <div class="contenedorTicket" id="cajaContenedorTicket">
 
             <div class="tituloTicket">
-                <h1>Reclamo</h1>
-
+                <h1 id="tituloTicketFinal"></h1>
                 <input type="button" value="Editar" onclick="editarDatos()">
             </div>
 
