subida de imagenes2

--- a/archivos.html
+++ b/archivos.html
@@ -24,7 +24,7 @@
             color: red;
         }
         .success {
-            color: green;
+            color: yellow;
         }
     </style>
 </head>
