--- a/archivos.html
+++ b/archivos.html
@@ -21,7 +21,7 @@
             font-size: 16px;
         }
         .error {
-            color: red;
+            color: orange;
         }
         .success {
             color: yellow;
