--- a/index.html
+++ b/index.html
@@ -229,9 +229,8 @@
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #dddddd;
-            border-radius: 8px;
-            background-color: #f5f8ff;
             box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+            outline: none;
         }
 
         textarea{
@@ -239,7 +238,6 @@
             width: 100%;
             border: none;
             padding: 10px;
-            border-radius: 8px;
             outline: none;
             margin-top: 10px;
             padding: 20px;
