libro de reclamaciones listo

--- a/reclamos.html
+++ b/reclamos.html
@@ -1036,7 +1036,7 @@
                                         <option value="Chaclacayo">Chaclacayo</option>
                                         <option value="Comas">Comas</option>
                                         <option value="El Agustino">El Agustino</option>
-                                        <option value="Ica">Ica</option>
+                                        <!-- <option value="Ica">Ica</option> -->
                                         <option value="Independencia">Independencia</option>
                                         <option value="La Victoria">La Victoria</option>
                                         <option value="Los Olivos">Los Olivos</option>
@@ -1872,7 +1872,7 @@
                                                 <option value="Chaclacayo">Chaclacayo</option>
                                                 <option value="Comas">Comas</option>
                                                 <option value="El Agustino">El Agustino</option>
-                                                <option value="Ica">Ica</option>
+                                                <!-- <option value="Ica">Ica</option> -->
                                                 <option value="Independencia">Independencia</option>
                                                 <option value="La Victoria">La Victoria</option>
                                                 <option value="Los Olivos">Los Olivos</option>
